<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Native Encryption</string>
    <string name="generate_file">Generate File</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt_library">Decrypt Library</string>
    <string name="decrypt_native">Decrypt Native</string>
    <string name="validate">Validate</string>
    <string name="cleanup">Cleanup</string>
    <string name="status">Status&#8230;</string>

    <string name="action_settings">Settings</string>

</resources>
