<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_file"/>

    <Button
        android:id="@+id/encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generate_file"
        android:text="@string/encrypt"/>

    <Button
        android:id="@+id/decrypt_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/encrypt"
        android:text="@string/decrypt_library"/>

    <Button
        android:id="@+id/decrypt_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/encrypt"
        android:layout_toRightOf="@+id/decrypt_library"
        android:text="@string/decrypt_native"/>

    <Button
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/decrypt_library"
        android:text="@string/validate"/>

    <Button
        android:id="@+id/cleanup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/decrypt_library"
        android:layout_toRightOf="@+id/validate"
        android:text="@string/cleanup"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/validate"
        android:paddingTop="8dp"
        android:text="@string/status"/>

</RelativeLayout>
